fix layer/zoom alignment

--- a/src/common/style.scss
+++ b/src/common/style.scss
@@ -87,7 +87,7 @@ body {
 
 .zd-controls__dock__group:nth-child(2) {
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
 
 .zd-control__button {
